# rpi-staple-tracker

./: CMakeLists.txt  README.md  images.qrc
benchmarks/: split_mat_nd_bench.cpp  staple_dummy.h  train_stage_loops_bench.cpp  updateHistModel_bench.cpp  update_stage_loops_bench.cpp
src/: capturesettings.h  capturesettingsdialog.cpp  capturesettingsdialog.h  capturesettingsdialog.ui  defaultcapturer.cpp  defaultcapturer.h  fhog.cpp  fhog.h  frameprovider.cpp  frameprovider.hpp  icameracapturer.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pantiltcontroller.cpp  pantiltcontroller.h  pantiltinterface.hpp  qimagedisplay.cpp  qimagedisplay.h  servo_control.cpp  servo_control.hpp  sse.hpp  tracker.cpp  tracker.hpp  tsr_buffer.hpp  utils.h  videocapturer.cpp  videocapturer.hpp  webcam.cpp
